# Genesis1.3Verson4_CUDA

./: CMakeLists.txt  README.md  README_CN.md
examples/Example3-TimeDependent/: Example3.cuda.in  run_gpu.sh  run_gpu_mps.sh
examples/Example4-HGHG/: Example4_a.cuda.in  Example4_a.cuda_profile.in  run_gpu.sh  run_gpu_mps.sh
include/: Beam.h  BeamSolver.h  Collective.h  Control.h  Diagnostic.h  DiagnosticBase.h  EFieldSolver.h  Field.h  FieldSolver.h  FieldSolverADICuda.h  FieldSolverFFT.h  FieldSolverFFTCuda.h  GenesisCudaKernels.h  GenesisNvtx.h  Incoherent.h  Track.h  TrackBeam.h
src/Core/: Beam.cpp  BeamSolver.cpp  Control.cpp  Diagnostic.cpp  Field.cpp  FieldSolverADI.cpp  FieldSolverADICuda.cpp  FieldSolverFFT.cpp  FieldSolverFFTCuda.cpp  Gencore.cpp  TrackBeam.cpp
src/Cuda/: GenesisCudaKernels.cu
src/IO/: writeBeamHDF5.cpp  writeFieldHDF5.cpp
src/Main/: GenMain.cpp  Track.cpp
src/Util/: GenesisNvtx.cpp
tools/: cuda_build_matrix.sh  cuda_profile.sh  cuda_regression_matrix.sh  cuda_stage3_6_ncu_profile.sh  cuda_stage3_6_profile.sh  cuda_stage3_6_sqlite_summary.py  cuda_stage3_7_rank_device_profile.sh  cuda_stage3_8_mps_sweep.sh  cuda_stage3_8_multi_gpu_policy_profile.sh  cuda_stage3_8_parse_logs.py  cuda_stage3_8_parse_profile_summary.py  cuda_stage3_8_policy_profile.sh  cuda_stage3_8_rank_sweep.sh  cuda_stage3_8_single_gpu_rank_sweep.sh  cuda_stage3_9B_correctness_guard.py  cuda_stage3_9B_memory_audit.sh  cuda_stage3_9B_parse_memory_audit.py  cuda_stage3_9C_mps_sweep.sh  cuda_stage3_9_parse_logs.py  cuda_stage3_9_recommend.py  cuda_stage3_9_worker_launch.sh  cuda_stage3_9_worker_sweep.sh  cuda_stage3_diag_profile.sh  cuda_stage4_0A_inplace_slippage_profile.sh  cuda_stage4_0_inplace_slippage_profile.sh  cuda_stage4_2A_beam_block_sweep.sh  cuda_stage4_2B_longitudinal_algebra_profile.sh  cuda_stage5_interp_cache_profile.sh
